# Xpeed

./: .gitignore  README.md  tox.ini
backend/: Dockerfile  main.py  pyproject.toml
backend/backend/: auth.py  errors.py  main.py  register.py  store_speedtest_results.py
backend/backend/storage/: database.py
client/: Dockerfile  README.md  run.sh
client/uploader/: go.mod  main.go  query.go  speedtest_results.go
infra/: main.tf
visualization/: main.py  pyproject.toml
visualization/tests/: test_visualization.py
visualization/visualization/: app.py  dashboard_header.md  data.py  graphs.py
