[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gitznik <r.offner@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
fastapi = "^0.76.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
