[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["Gitznik <r.offner@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.9.0"
pandas = "^1.4.2"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
